--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ def NATIVE_LIB_DIR = 'build/lib'
 def JAR_DIR = 'build/java/vuforia'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
     sourceSets.main {
@@ -15,8 +15,8 @@ android {
 
     defaultConfig {
         applicationId "com.mastercard.hackathon"
-        minSdkVersion 8
-        targetSdkVersion 22
+        minSdkVersion 16
+        targetSdkVersion 23
         versionCode 200
         versionName "5.0"
     }
@@ -42,4 +42,5 @@ android {
 
 dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
+    compile 'com.simplify:simplify-android:2.1.0'
 }
