--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ android {
 dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
     compile 'com.simplify:simplify-android:2.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
