--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mastercard.hackathon" >
-
+    package="com.mastercard.hackathon">
     <!--
         The application's compatibility with one or more versions of the Android
         platform.
@@ -9,7 +8,9 @@
         android:minSdkVersion = application's required minimum API level to run
         android:targetSdkVersion = application's targeted API level
     -->
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="22" />
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="22" />
 
     <uses-feature android:glEsVersion="0x00020000" />
 
@@ -28,25 +29,23 @@
          assumed as required.
     -->
     <uses-feature android:name="android.hardware.camera" />
-    
-    <!--
-        Add this permission to get access to the camera.
-    -->
+
+    <!-- Add this permission to get access to the camera. -->
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <!--
-        Add this permission to allow opening network sockets.
-    -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- Add this permission to allow opening network sockets. -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--
         Add this permission to check which network access properties (e.g.
         active type: 3G/WiFi).
-     -->
+    -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <!--
       NOTE: The setting 'android:launchMode="singleTask"' makes sure
       that the activity can begin only one task and the device can hold only
@@ -58,16 +57,14 @@
       would allow the activity to be launched multiple times.
     -->
     <application
+        android:allowBackup="true"
+        android:description="@string/app_description"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:description="@string/app_description"
         android:launchMode="singleTask"
-        android:allowBackup="true"
-        android:theme="@style/SampleAppsTheme"
-        >
-        
+        android:theme="@style/SampleAppsTheme">
 
-         <!--
+        <!--
           NOTE: The values in 'android:configChanges' ensure that Android will 
           not destroy and re-create the activity when the user flips the 
           keyboard, changes the orientation of the device, or the actual or 
@@ -82,40 +79,30 @@
           Activity.setRequestedOrientation().
         -->
         <!-- Splash Screen Activity -->
-         <activity
+        <activity
             android:name="demoApplication.ui.ActivitySplashScreen"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
-            android:screenOrientation="portrait"
             android:noHistory="true"
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-         </activity>
-        
+        </activity>
         <activity
             android:name="demoApplication.ui.ActivityLauncher"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
-            android:screenOrientation="portrait"
-            >
-        </activity>
-        
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.mastercard.hackathon.ui.ActivityList.FrameMarkers"
+            android:name=".ui.ActivityList.FrameMarkers"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
-        	android:theme="@style/SampleAppsTheme"
- 	        android:launchMode="singleTask"
-            >
-        </activity>
+            android:launchMode="singleTask"
+            android:theme="@style/SampleAppsTheme" />
+        <activity android:name=".ui.ActivityList.PaymentActivity" />
 
-        <activity android:name=".ui.ActivityList.PaymentActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
+        <activity android:name=".ui.ActivityList.ChoiceActivity" />
+        <activity android:name=".ui.ActivityList.ConfirmationActivity"></activity>
     </application>
 
 </manifest>
